manifests/spring-petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-service
  labels:
    app: spring-petclinic
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-petclinic
  type: ClusterIP
